# rust-learn-todo-list-api

./: Cargo.toml  README.md
migrations/2024-04-26-231137_initial_tasks/: up.sql
src/: error.rs  main.rs  response.rs  schema.rs
src/controller/: task.rs
src/db/: mod.rs
src/model/: task.rs
src/routes/: mod.rs  task.rs
