[package]
name = "todo-list-api"
description = "A simple todo list API for Rust language learning purposes"
authors = ["Thiago Goslar <thiarthur1@availit.com.br>"]
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
diesel = { "version" = "2.1.6", "features" = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
ntex = { version = "1.0", features = ["tokio"] }
serde = "1.0.199"
